--- a/site1.html
+++ b/site1.html
@@ -13,13 +13,15 @@
         <ul>
             <li><a href="index.html">DOM classic</a></li>
             <li><a href="site1.html">DOM By Id</a></li>
-        </ul>
+            <li><a href="uebungen.html">Formulare übungen</a></li>
+
+       </ul>
     </header>
     <main>
         <h1 id="h1Element"></h1>
         <p id="pElement"></p>
 
-        <input type="text" id="eingabe" onfocus="clear()" value="Please type in a text">
+        <input type="text" id="eingabe" onclick="clear()" value="Please type in a text">
         <input type="button" id="button" onclick="writeButton()" value="Submit">
     </main>
     <script>
@@ -27,13 +29,13 @@
 
         function clear() {
             alert("do it");
-            document.getElementById("eingabe").value = "---";
+            document.getElementById("eingabe").innerHTML="";
         }
 
         function writeButton() {
             let inhalt = document.getElementById("eingabe").value;
 
-            document.getElementById("button").value = inputValue;
+            document.getElementById("button").value = inhalt;
 
         }
 
