--- a/uebungenmail.html
+++ b/uebungenmail.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
-    <title>Document</title>
+    <title>Documenwt</title>
 </head>
 
 <body>
@@ -69,9 +69,8 @@
             return true;
 
         }
+                  let shown = false;
 
-        let shown = false;
-        
         function mailfocus() {
             alert("Please provide an email");
             inputmail.focus();
